背单词界面优化(中期检查版)
还需要增加交互信息提示，添加返回后一页的按钮

--- a/WordReview/WordReview/templates/homepage.pug
+++ b/WordReview/WordReview/templates/homepage.pug
@@ -30,15 +30,12 @@ style
   |   display: flex;
   |   justify-content: center;
   | }
-  | .github{
-  |   margin: 0px 3px
-  }
 {% endblock %}
 
 {% block content %}
 div.container.flex-column
-  p
-    a(style="text-align:end;" href="/calendar/") 艾宾浩斯复习日历
+  p(style="margin-top:20px")
+    a(style="text-align:end;font-size:25px;" href="/calendar/") 艾宾浩斯复习日历
   
   #tmpl-qotd
 
