--- a/login/views/pages/profile.pug
+++ b/login/views/pages/profile.pug
@@ -10,16 +10,16 @@ block content
         a(href="/profile/logout" style="color: #ffffff;margin-top:20px").btn.btn-primary 退出登录
   else
     .text-center
-      h1 Login
+      h1 登录
       .row
         .col-md-4
         .col-md-4
           form(action="/profile", method="post")
             .mb-3
-              input(type="email", name="email", placeholder="email").form-control
+              input(type="email", name="email", placeholder="请输入注册好的邮箱").form-control
             .mb-3
-              input(type="password", name="secret", placeholder="password").form-control
+              input(type="password", name="secret", placeholder="请输入注册好的密码").form-control
             .mb-3
-              input(type="submit", value="Authorize").form-control
+              input(type="submit", value="点击登录").form-control
         .col-md-4
-      a(href="/register") Register?
+      a(href="/register") 点击注册
