背单词部分前端代码
完善了前端代码

--- a/WordReview/WordReview/templates/calendar.pug
+++ b/WordReview/WordReview/templates/calendar.pug
@@ -6,6 +6,7 @@ script(src="/static/js/calendar.js")
 {% endblock %}
 
 {% block content %}
+a.btn.btn-primary(href="#", onclick="window.history.back()", style="font-size: 16px; position: absolute; top: 20px; left: 150px;") 返回上一页
 div.container.flex-column
   div.align-self-center
     table(border='1')
